# QtWrapper_c

./: CMakeLists.txt  LICENSE  README.md
include/: qapplication_c.h  qbrush_c.h  qcolor_c.h  qfont_c.h  qimage_c.h  qpainter_c.h  qpen_c.h
src/: CMakeLists.txt  Makefile  cmake_install.cmake  qapplication_c.cpp  qcolor_c.cpp  qfont_c.cpp  qimage_c.c  qimage_c.cpp  qpainter_c.cpp
test/: CMakeLists.txt  test.c
